--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "npm": ">=6.14"
   },
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "minimist": "^1.2.6"
   },
   "dependencies": {}
 }
