--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -16,10 +16,10 @@
     "socket.io-client": "^4.4.1",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2",
-    "nth-check": "2.0.1"
+    "nth-check": ">=2.0.1"
   },
   "resolutions": {
-    "nth-check": "2.0.1"
+    "nth-check": ">=2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
